  the archive is only readable in --sequential-read mode
- fixed bug met while reading an interrupted archive in sequential read
  mode leading dar to not release some objects from memory at the end of
  the operation.
- fixed message reporting unknown system group when converting gid to name
  (was reporting unknow "user" instead of "group")

from 2.4.4 to 2.4.5
- updated sample scripts to be compatible with dar's --min-digit option
- added missing included file to be able to compile with gcc-4.7.0
- removing an unused variable in filtre.cpp
- fixed a display bug when comparing archive with filesystem, leading to a
  segmentation fault (%S in place of %i in mask)
- fixed bug leading dar to not restore some directories from differential
  backups when they are absent in the filesystem
- fixed bug that show a "uncaught exception" message at the end of archive
  listing for dar shared binaries only, compiled in infinint mode, under
  ArchLinux
- updated the configure script to link with libexecinfo when available
- added possibility to disable the use of execinfo in libdar thanks to the
  new --disable-execinfo option for the ./configure script
- added Andreas Wolff patch to fix bug under Cygwin (segfault on program
  termination).

from 2.4.3 to 2.4.4
- fixed man pages in the NAME section: added whatis entry
- fixed segfault: in the internal error reporting code (delete[] in place of
  free())
- fixed bug: dar_manager was not able to read properly the latest generated
  databases version when having Extended Attributes recorded for some files
- avoided reporting unreleased memory block when compilation optimization
  have been used (dar, dar_manager, dar_cp, dar_slave, dar_xform do all
  reported unreleased memory when gcc optimization was used in "infinint" mode)

from 2.4.2 to 2.4.3
- fixed absurd compilation warning about possibly uninitialized variable
- added -ai switch to dar_manager to disable warning about improper file order
  in database.