@@ -26,4 +26,4 @@
 	dialog.printf(gettext("   -v\t\t   display more information about what is going on\n"));
 	dialog.printf(gettext("   -j\t\t   ask user what to do when memory is exhausted\n"));
 	dialog.printf(gettext("\n"));
-	dialog.printf(gettext("See man page for more details.\n"));
+	dialog.printf(gettext("See man page for more options.\n"));
