@@ -5,4 +5,4 @@
 	dialog.printf(gettext("   -E <string>\t   command line to execute between slices of the archive\n"));
 	dialog.printf(gettext("   -j\t\t   ask user what to do when memory is exhausted\n"));
 	dialog.printf(gettext("\n"));
-	dialog.printf(gettext("See man page for more details.\n"));
+	dialog.printf(gettext("See man page for more options.\n"));
