@@ -19,4 +19,4 @@
 	dialog.printf(gettext("   -j\t\t   ask user what to do when memory is exhausted\n"));
 	dialog.printf(gettext("   -^ <string>\t   permission[:user[:group]] of created slices\n"));
 	dialog.printf(gettext("\n"));
-	dialog.printf(gettext("See man page for more details.\n"));
+	dialog.printf(gettext("See man page for more options.\n"));
