@@ -123,7 +123,7 @@
   </arg>
 
   <hdr vspace="1">
-    See man page for more details.
+    See man page for more options.
   </hdr>
 <!--
 Revision 1.3  2002/08/20 13:44:08  cs1cwm
